--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foody Template by Agasalim</title>
+    <title>Foody by Agasalim</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
@@ -64,8 +64,7 @@
                             </div>
                             <h3>enjoy eating</h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary
-                                regelialia.
-                            </p>
+                                regelialia.</p>
                         </div>
                         <div class="eating" data-aos="fade-up" data-aos-duration="800">
                             <div class="icon_box">
@@ -73,8 +72,7 @@
                             </div>
                             <h3>Fresh Sea Foods</h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary
-                                regelialia.
-                            </p>
+                                regelialia.</p>
                         </div>
                         <div class="eating" data-aos="fade-up" data-aos-duration="1000">
                             <div class="icon_box">
@@ -82,8 +80,7 @@
                             </div>
                             <h3>Cup of Coffees</h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary
-                                regelialia.
-                            </p>
+                                regelialia.</p>
                         </div>
                         <div class="eating" data-aos="fade-up" data-aos-duration="1200">
                             <div class="icon_box">
@@ -91,8 +88,7 @@
                             </div>
                             <h3>Meat Eaters</h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary
-                                regelialia.
-                            </p>
+                                regelialia.</p>
                         </div>
                     </div>
                 </div>
@@ -110,14 +106,14 @@
                         </div>
                         <div class="menu_pictures">
                             <div class="menu_pic">
-                                <img src="../Foody/Source/food_menu1.webp" alt="">
+                                <img src="Source/food_menu1.webp" alt="">
                             </div>
                             <div class="menu_pic">
-                                <img src="../Foody/Source/food_menu2.webp" alt="">
-                                <img src="../Foody/Source/food_menu3.webp" alt="">
+                                <img src="Source/food_menu2.webp" alt="">
+                                <img src="Source/food_menu3.webp" alt="">
                             </div>
                             <div class="menu_pic">
-                                <img src="../Foody/Source/food_menu4.webp" alt="">
+                                <img src="Source/food_menu4.webp" alt="">
                             </div>
                         </div>
                     </div>
@@ -125,14 +121,14 @@
             </section>
 
             <section id="special_menu">
-                    <div class="container">
+                <div class="container">
                     <hr class="head_line">
                     <h2 class="section_name">special menu</h2>
                     <div class="spc_menu">
                         <div class="menu">
                             <a href="#">
                                 <div class="menu_img">
-                                    <img src="../Foody/Source/dishes_2.webp" alt="">
+                                    <img src="Source/dishes_2.webp" alt="">
                                 </div>
                                 <div class="menu_info">
                                     <div class="price">$12.00</div>
@@ -143,7 +139,7 @@
                         <div class="menu">
                             <a href="">
                                 <div class="menu_img">
-                                    <img src="../Foody/Source/dishes_3.webp" alt="">
+                                    <img src="Source/dishes_3.webp" alt="">
                                 </div>
                                 <div class="menu_info">
                                     <div class="price">$11.00</div>
@@ -154,7 +150,7 @@
                         <div class="menu">
                             <a href="">
                                 <div class="menu_img">
-                                    <img src="../Foody/Source/dishes_4.webp" alt="">
+                                    <img src="Source/dishes_4.webp" alt="">
                                 </div>
                                 <div class="menu_info">
                                     <div class="price">$12.00</div>
@@ -164,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                </section>
+            </section>
 
             <section id="our_menu">
                 <div class="container">
@@ -172,7 +168,7 @@
                     <h2 class="section_name">our menu</h2>
                     <div class="dishes">
                         <div class="dish1">
-                            <img src="../Foody/Source/dish_photo1.webp" alt="">
+                            <img src="Source/dish_photo1.webp" alt="">
                             <div class="dish_price">
                                 <h4>Grilled Caesar salad, shaved reggiano</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -181,7 +177,7 @@
                             </div>
                         </div>
                         <div class="dish1">
-                            <img src="../Foody/Source/dish_photo2.webp" alt="">
+                            <img src="Source/dish_photo2.webp" alt="">
                             <div class="dish_price">
                                 <h4>Bacon wrapped wild gulf prawns</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -190,7 +186,7 @@
                             </div>
                         </div>
                         <div class="dish2">
-                            <img src="../Foody/Source/dish_photo3.webp" alt="">
+                            <img src="Source/dish_photo3.webp" alt="">
                             <div class="dish_price">
                                 <h4>Spicy Calamari and beans</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -199,7 +195,7 @@
                             </div>
                         </div>
                         <div class="dish2">
-                            <img src="../Foody/Source/dish_photo4.webp" alt="">
+                            <img src="Source/dish_photo4.webp" alt="">
                             <div class="dish_price">
                                 <h4>Seared ahi tuna fillet*, honey-ginger sauce</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -208,7 +204,7 @@
                             </div>
                         </div>
                         <div class="dish1">
-                            <img src="../Foody/Source/dish_photo1.webp" alt="">
+                            <img src="Source/dish_photo1.webp" alt="">
                             <div class="dish_price">
                                 <h4>Grilled Caesar salad, shaved reggiano</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -217,7 +213,7 @@
                             </div>
                         </div>
                         <div class="dish1">
-                            <img src="../Foody/Source/dish_photo2.webp" alt="">
+                            <img src="Source/dish_photo2.webp" alt="">
                             <div class="dish_price">
                                 <h4>Bacon wrapped wild gulf prawns</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -226,7 +222,7 @@
                             </div>
                         </div>
                         <div class="dish2">
-                            <img src="../Foody/Source/dish_photo3.webp" alt="">
+                            <img src="Source/dish_photo3.webp" alt="">
                             <div class="dish_price">
                                 <h4>Spicy Calamari and beans</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -235,7 +231,7 @@
                             </div>
                         </div>
                         <div class="dish2">
-                            <img src="../Foody/Source/dish_photo4.webp" alt="">
+                            <img src="Source/dish_photo4.webp" alt="">
                             <div class="dish_price">
                                 <h4>Seared ahi tuna fillet*, honey-ginger sauce</h4>
                                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus...
@@ -258,7 +254,7 @@
                                 there live the blind texts. Separated they live in Bookmarksgrove right at the coast
                                 of the Semantics, a large language ocean. ”</p>
                             <div class="person_box">
-                                <img src="../Foody/Source/person_3.webp" alt="">
+                                <img src="Source/person_3.webp" alt="">
                                 <div class="person_info">
                                     <h4>Charles White</h4>
                                     <h5>CEO, XYZ Company</h5>
@@ -276,7 +272,7 @@
                     <div class="blogs">
                         <div class="blog" data-aos="fade-up" data-aos-duration="800">
                             <a href="#">
-                                <img src="../Foody/Source/blog_dish_1.webp" alt="">
+                                <img src="Source/blog_dish_1.webp" alt="">
                             </a>
                             <div class="blog_content">
                                 <a href="#" class="head_desc">how to cook pasta?</a>
@@ -289,7 +285,7 @@
                         </div>
                         <div class="blog" data-aos="fade-up" data-aos-duration="1000">
                             <a href="#">
-                                <img src="../Foody/Source/blog_dish_2.webp" alt="">
+                                <img src="Source/blog_dish_2.webp" alt="">
                             </a>
                             <div class="blog_content">
                                 <a href="#" class="head_desc">how to cook pasta?</a>
